2019-11-28  Zalan Bujtas  <zalan@apple.com>

        [LFC][IFC] Fix LineLayoutContext::shouldProcessUncommittedContent logic
        https://bugs.webkit.org/show_bug.cgi?id=204656
        <rdar://problem/57511221>

        Reviewed by Antti Koivisto.

        Move the [text][text] and [ ][text] checks further down because we adjust the "lastUncomittedContent" by skipping [container start][container end] items.  
        (This was recently regressed at r252859)

        * layout/inlineformatting/LineLayoutContext.cpp:
        (WebCore::Layout::LineLayoutContext::shouldProcessUncommittedContent const):

2019-11-28  Zalan Bujtas  <zalan@apple.com>

        [LFC] canUseSimplifiedTextMeasuring should check for FontCascade::Complex
        https://bugs.webkit.org/show_bug.cgi?id=204663
        <rdar://problem/57513642>

        Reviewed by Antti Koivisto.

        * layout/layouttree/LayoutTreeBuilder.cpp:
        (WebCore::Layout::canUseSimplifiedTextMeasuring):

2019-11-28  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Convert GLVideoSink and WebKitWebSrc to WEBKIT_DEFINE_TYPE
        https://bugs.webkit.org/show_bug.cgi?id=204674

        Reviewed by Carlos Garcia Campos.

        This is mostly a refactoring, simplifying the code-base a bit.

        * platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
        (webKitGLVideoSinkConstructed):
        (webKitGLVideoSinkFinalize):
        (webkit_gl_video_sink_class_init):
        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (webkit_web_src_class_init):
        (webKitWebSrcConstructed):

2019-11-28  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Move GL video sink to its own GstBin sub-class
        https://bugs.webkit.org/show_bug.cgi?id=204624

        Reviewed by Xabier Rodriguez-Calvar.

        This reduces the MediaPlayerPrivate code-base and adds a good
        separation of responsibility regarding GL video rendering. The